change Cupping Coffee css: background-color,font-color

--- a/css/menu.css
+++ b/css/menu.css
@@ -1,11 +1,16 @@
+body{
+    background-color:#b5a789;
+
+}
+
 h1{
     margin-top:80px;
-    color:green;
+    color:#675c47;;
     text-align:center;
 }
 
 h2{
-    color:green;
+    color:#675c47;
     text-align:center;
 }
 
@@ -25,7 +30,7 @@ table{
 }
 
 tr:nth-child(odd){
-    background-color: #eeeeee;
+    background-color: #efe5d0;;
 }
 
 tr:nth-child(even){
@@ -38,7 +43,7 @@ th{
     font-size: large;
     padding-top: 20px;
     padding-bottom:20px;
-    color:green;
+    color:#675c47;;
 }
 
 .taste,.beans,.flavor{
