--- a/css/menu.css
+++ b/css/menu.css
@@ -1,4 +1,4 @@
-body{
+body,#tableContainer{
     background: #efe5d0 url("../images/background2.gif") top left;
 }
 
@@ -63,13 +63,6 @@ p{
 
 em{
     font-style:italic;
-}
-
-#header{
-    background:url("../images/background2.gif"),url("../images/background.gif ") top left;
-
-    margin:10px;
-
 }
 
 
